--- a/zengshan.html
+++ b/zengshan.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="../vue.js"></script>
+    <script src="./vue.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/layui@2.6.8/dist/css/layui.css" />
     <script src="https://unpkg.com/layui@2.6.8/dist/layui.js"></script>
 </head>
@@ -39,8 +39,18 @@
 
 <body>
     <div id="box">
+      <br>
         <input type="text" v-model="num1">+
         <input type="text" v-model="num2">={{+num1+ + +num2}}
+        <br><br>
+        <input type="text" v-model="num3">*
+        <input type="text" v-model="num4">={{+num3+ + +num4}}
+        <br><br>
+        <input type="text" v-model="num5">/
+        <input type="text" v-model="num6">={{+num5+  +num6}}
+        <br><br>
+        <input type="text" v-model="num7">-
+        <input type="text" v-model="num8">={{+num7+ - +num8}}
      </div>
      <br>
      <script>
@@ -49,6 +59,12 @@
            data:{
                num1:'',
                num2:'',
+               num3:'',
+               num4:'',
+               num5:'',
+               num6:'',
+               num7:'',
+               num8:'',
            }
         })
    </script>
