--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </style>
     <div class="container">
       <a href="./zengshan.html"><button class="btn btn1">7.26作业</button></a>
-      <button class="btn btn2">Hover Me</button>
+      <a href="./Vuexue.html"><button class="btn btn2">7.28作业</button></a>
       <button class="btn btn3">Hover Me</button>
       <button class="btn btn4">Hover Me</button>
     </div>
