--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container">
       <a href="./zengshan.html"><button class="btn btn1">7.26作业</button></a>
       <a href="./Vuexue.html"><button class="btn btn2">7.28作业</button></a>
-      <button class="btn btn3">Hover Me</button>
+      <a href="./kaoshi.html"><button class="btn btn3">考试作业</button></a>
       <button class="btn btn4">Hover Me</button>
     </div>
   </body>
